Added image to history, need tests
